styles fix on layout component

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,11 +1,14 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container main {
   width: 960px;
   max-width: 960px;
+  margin: 5rem 0;
 }
 
 h3 {
