--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -1,8 +1,12 @@
 nav {
   position: fixed;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 70px;
   background-color: #181818;
+  color: #f3f3f3;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
