--- a/src/components/Cart/styles.css
+++ b/src/components/Cart/styles.css
@@ -48,6 +48,12 @@
   border: 1px solid #161616;
   padding: 0.8rem;
 }
+.shipping-cart-vouchers__empty {
+  background-color: #161616;
+  color: #f2f2f2;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+}
 
 .shopping-cart-info__content {
   padding: 1rem;
